# 3d-terminal

./: .gitignore  .gitmodules  CMakeLists.txt  Graphics.cpp  Graphics.h  IndexedLineList.h  IndexedList.h  Mat3.cpp  Mat3.h  Model.cpp  Model.h  ModelImporter.h  README.md  Vec3.cpp  Vec3.h  World.cpp  World.h  WorldScreenTransformer.h  main.cpp  objImported.cpp  objImporter.cpp  timer.cpp
Models/: Cube.cpp  Pyramid.cpp  all.h
src/: CMakeLists.txt  Graphics.h  IndexedList.h  Mat3.h  Model.h  ModelImporter.h  Vec3.h  World.cpp  WorldScreenTransformer.h  graphics.cc  graphics.h  import_exception.cc  indexed_list.h  main.cc  main.cpp  mat3.h  model.h  model_importer.h  objImporter.cpp  obj_importer.cc  timer.cc  timer.cpp  vec3.h  world.cc  world.h  world_screen_transformer.h
src/Models/: Cube.cpp
src/models/: all.h  cube.cc  pyramid.cc
test/: CMakeLists.txt  objImportTest.cpp  obj_import_test.cc
